# atom

./: .gitignore  AGENTS.local.md  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTE.md  Cargo.toml  Makefile  README.ja.md  README.md  atom.config.toml.example  config.toml.example  cspell-project-words.txt  cspell.json  justfile
.github/workflows/: ci.yml  release.yml
benchmark/: .gitignore  README.md  benchmark.config.toml.example  requirements-markitdown.txt
benchmark/methods/: benchmark.md  directory-evaluation-plan.md  improvement-cycle.md  ocr-engine-evaluation.md
benchmark/ocr-eval/: compare.py  gen_fixtures.py  rec_golden.py
benchmark/ocr-eval/fixtures/: katakana-gothic-h.gt.txt  manifest.json  number-gothic-h.gt.txt  tech-maru-h.gt.txt  vertical-gothic-v.gt.txt
benchmark/ocr-eval/fixtures-line/: line-num.gt.txt  line-ocr.gt.txt  line-tech.gt.txt
benchmark/scripts/: atom_inventory.py  atom_supported_extensions.py  compare_atom_markitdown.py  inspect_markitdown_outputs.py  markitdown_inventory.py  probe_pdf_markitdown_impl.py  run_directory_evaluation.py  select_review_samples.py
benchmark/tools/: README.md
benchmark/tools/mammoth-js/: Dockerfile
benchmark/tools/markitdown/: Dockerfile
benchmark/tools/ocr-rs-probe/: Cargo.toml  README.md
benchmark/tools/ocr-rs-probe/src/: main.rs
benchmark/tools/paddleocr-v6/: README.md  paddleocr-v6  run.py
benchmark/tools/paddleocr-v6-ort-probe/: Cargo.toml  README.md
benchmark/tools/paddleocr-v6-ort-probe/src/: main.rs
benchmark/tools/pandoc/: Dockerfile
benchmark/tools/pdf-oxide-probe/: Cargo.toml
benchmark/tools/pdf-oxide-probe/src/: main.rs
benchmark/tools/pdf-rs-text-probe/: Cargo.toml
benchmark/tools/pdf-rs-text-probe/src/: main.rs
benchmark/tools/surya/: README.md
docs/: implementation-plan.md  m6-evaluation-summary.md  markitdown-failed-pdf-office-release-check.md  markitdown-old-atom-failed-release-check.md  ocr.md  release-notes-v0.1.1.md  requirements.md  tasks-m7.md  tasks.md
docs/archive/: tasks-m1-m5.md  tasks-m6.md
evaluation/: .gitignore  Cargo.toml  README.md  atom-evaluation.config.toml.example  public-corpus-observations.md  tools.md
evaluation/methods/: benchmark.md  evaluation.md  fixture-design.md  golden-review.md  llm-evaluation.md  source-research.md
evaluation/src/: lib.rs  llm_eval.rs  metrics.rs
evaluation/tests/: baseline.rs  bench.rs  corpus_eval.rs  eval.rs
evaluation/tool-runners/: README.md
evaluation/tool-runners/docling/: Dockerfile
evaluation/tool-runners/markitdown/: run.py
evaluation/tool-runners/pandoc/: run.sh
evaluation/tool-runners/pymupdf4llm/: Dockerfile
examples/: pdf_backend_probe.rs  pdf_order_probe.rs
scripts/: bump-version.sh
src/: lib.rs  main.rs
src/core/: config.rs  mod.rs  naming.rs  options.rs  report.rs
src/evaluation/: mod.rs
src/integrations/: http.rs  llm.rs  mod.rs  ocr.rs  wasm_plugin.rs
src/parsers/: docx.rs  docx_media.rs  docx_relationships.rs  mod.rs  opendocument.rs  pdf.rs
src/parsers/ooxml/: docx_body_order.rs  mod.rs
src/parsers/pdf/: diagnosis.rs  legacy.rs  mod.rs  pdf_oxide_backend.rs  pdf_rs.rs  quality.rs  raw_content.rs  structure.rs  types.rs
src/parsers/pdf/legacy/: internal_text.rs
src/parsers/pdf/pdf_oxide_backend/: form_words.rs
src/parsers/pdf/raw_content/: bytes.rs  decoder.rs  encryption.rs  streams.rs
src/pipeline/: converter.rs  mod.rs  ooxml_conversion.rs  ooxml_package.rs  pdf_conversion.rs
src/writers/: markdown.rs
src/writers/markdown/: headings.rs  inline.rs  paragraphs.rs  tables.rs  wrap.rs
tests/: api.rs  baseline.rs  bench.rs  config.rs  corpus_eval.rs  distribution.rs  docx_golden.rs  eval.rs  fixture_corpora.rs  guardrails.rs  html_golden.rs  integration.rs  llm.rs  media.rs  ocr.rs  pdf.rs  pdf_golden.rs  wasm_plugin.rs
tests/fixtures/: README.md
tests/fixtures/integration/: MANIFEST.md
tests/fixtures/regression/: MANIFEST.md
tests/fixtures/unit/: README.md
tests/inputs/: README.md
(+18 files in other folders)
