[package]
name = "anything-to-markdown"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Anything to Markdown."

[workspace]
members = ["evaluation"]
resolver = "3"

[lib]
name = "anything_to_markdown"
path = "src/lib.rs"

[[bin]]
name = "atom"
path = "src/main.rs"

[profile.release]
lto = true
strip = true

[dependencies]
encoding_rs = "0.8"
hayro = "0.7.0"
hayro-cmap = { version = "0.1.0", features = ["embed-cmaps"] }
image = "0.25"
lopdf = { version = "0.38.0", default-features = false }
ocr-rs = "2.2.2"
pdf-extract = "0.10.0"
zip = "8.6.0"
