[package]
name = "anything-to-markdown"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Anything to Markdown."

[workspace]
members = ["evaluation"]
resolver = "3"

[lib]
name = "anything_to_markdown"
path = "src/lib.rs"

[[bin]]
name = "atom"
path = "src/main.rs"

[profile.release]
lto = true
strip = true

[dependencies]
encoding_rs = "0.8"
flate2 = "1"
hayro = "0.7.0"
hayro-cmap = { version = "0.1.0", features = ["embed-cmaps"] }
image = "0.25"
lopdf = { version = "0.38.0", default-features = false }
md-5 = "0.10"
ocr-rs = "2.2.2"
pdf-extract = "0.10.0"
pdf = "0.10.0"
pdf_oxide = "0.3.61"
serde_json = "1.0"
ureq = { version = "3", features = ["json"] }
zip = "8.6.0"
