[package]
name = "atom-evaluation"
version = "0.1.0"
edition = "2024"
license = "MIT"
publish = false

[[bin]]
name = "atom-eval"
path = "bin/atom-eval.rs"

[[bin]]
name = "atom-compare-baseline"
path = "bin/atom-compare-baseline.rs"

[[bin]]
name = "atom-bench"
path = "bin/atom-bench.rs"

[[bin]]
name = "atom-pdf-probe"
path = "bin/atom-pdf-probe.rs"

[dependencies]
anything-to-markdown = { path = ".." }
lopdf = { version = "0.38.0", default-features = false }
pdf-extract = "0.10.0"
